--- a/Kamu_Medi_Care/Kamu_Medi_Care/Kamu_Medi_Care.csproj
+++ b/Kamu_Medi_Care/Kamu_Medi_Care/Kamu_Medi_Care.csproj
@@ -52,12 +52,6 @@
     <Compile Include="Appointment\Appointment.Designer.cs">
       <DependentUpon>Appointment.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
-    </Compile>
     <Compile Include="Medicines\Medicine.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -66,8 +60,20 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="Receptions\Reception.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Receptions\Reception.Designer.cs">
+      <DependentUpon>Reception.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Templates\Temaplate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Templates\Temaplate.Designer.cs">
+      <DependentUpon>Temaplate.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Appointment\Appointment.resx">
+      <DependentUpon>Appointment.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -78,6 +84,12 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Receptions\Reception.resx">
+      <DependentUpon>Reception.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Templates\Temaplate.resx">
+      <DependentUpon>Temaplate.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
