--- a/Kamu_Medi_Care/Medi_Care.Service/Medi_Care.Service.csproj
+++ b/Kamu_Medi_Care/Medi_Care.Service/Medi_Care.Service.csproj
@@ -48,6 +48,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="MedicineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceptionService.cs" />
   </ItemGroup>
