--- a/Kamu_Medi_Care/Kamu_Medi_Care/Kamu_Medi_Care.csproj
+++ b/Kamu_Medi_Care/Kamu_Medi_Care/Kamu_Medi_Care.csproj
@@ -59,6 +59,12 @@
     <Compile Include="Appointment\Appointment.Designer.cs">
       <DependentUpon>Appointment.cs</DependentUpon>
     </Compile>
+    <Compile Include="Receptions\ViewAppointments.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Receptions\ViewAppointments.Designer.cs">
+      <DependentUpon>ViewAppointments.cs</DependentUpon>
+    </Compile>
     <Compile Include="Medicines\Medicine.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     </Compile>
     <EmbeddedResource Include="Appointment\Appointment.resx">
       <DependentUpon>Appointment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Receptions\ViewAppointments.resx">
+      <DependentUpon>ViewAppointments.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Medicines\Medicine.resx">
       <DependentUpon>Medicine.cs</DependentUpon>
