--- a/Kamu_Medi_Care/Medi_Care.Database/Medi_Care.Database.csproj
+++ b/Kamu_Medi_Care/Medi_Care.Database/Medi_Care.Database.csproj
@@ -65,6 +65,10 @@
     <Compile Include="Migrations\201903270857462_ApplyAnnotationOnGender.Designer.cs">
       <DependentUpon>201903270857462_ApplyAnnotationOnGender.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201903271458286_SignIn.cs" />
+    <Compile Include="Migrations\201903271458286_SignIn.Designer.cs">
+      <DependentUpon>201903271458286_SignIn.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -90,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201903270857462_ApplyAnnotationOnGender.resx">
       <DependentUpon>201903270857462_ApplyAnnotationOnGender.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201903271458286_SignIn.resx">
+      <DependentUpon>201903271458286_SignIn.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
