--- a/Kamu_Medi_Care/Medi_Care.Models/Medi_Care.Models.csproj
+++ b/Kamu_Medi_Care/Medi_Care.Models/Medi_Care.Models.csproj
@@ -53,6 +53,7 @@
     <Compile Include="MedicineModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceptionModel.cs" />
+    <Compile Include="ReportModel.cs" />
     <Compile Include="SignIn.cs" />
   </ItemGroup>
   <ItemGroup>
