--- a/Kamu_Medi_Care/Medi_Care.Service/Medi_Care.Service.csproj
+++ b/Kamu_Medi_Care/Medi_Care.Service/Medi_Care.Service.csproj
@@ -51,6 +51,7 @@
     <Compile Include="MedicineService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceptionService.cs" />
+    <Compile Include="ReportService.cs" />
     <Compile Include="SignInService.cs" />
   </ItemGroup>
   <ItemGroup>
