--- a/Kamu_Medi_Care/Medi_Care.Models/Medi_Care.Models.csproj
+++ b/Kamu_Medi_Care/Medi_Care.Models/Medi_Care.Models.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="AppointMedicineModel.cs" />
     <Compile Include="AppointmentModel.cs" />
+    <Compile Include="BillModel.cs" />
     <Compile Include="MedicineModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ReceptionModel.cs" />
